--- a/practice/index.html
+++ b/practice/index.html
@@ -11,7 +11,7 @@
             <h1 class="text-2xl font-semibold text-center mb-6">Login</h1>
             <input type="text" class="w-full p-3 mb-4 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter your username">
             <button class="w-full bg-blue-500 hover:bg-blue-400 text-white py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition ease-in-out duration-300">
-                Submit
+                Login
             </button>
         </div>
     </div>
